--- a/app/views/imported_sentence_synonyms/_filter_form.html.slim
+++ b/app/views/imported_sentence_synonyms/_filter_form.html.slim
@@ -1,19 +1,20 @@
 - form_url = @bot ? bot_imported_sentence_synonyms_path(@bot) : imported_sentence_synonyms_path
 
-.well
-  = form_tag form_url, class: 'form-inline', method: :get, data: { event_name: 'Filter sentence synonym index', bot_id: @bot.try(:id), bot_name: @bot.try(:name) } do
-    - if policy(:sentence_synonym).worker_filter?
-      = collection_select :filter, :worker_id, User.worker, :id, :email, { prompt: '-- ワーカーを選択 --', selected: params.dig(:filter, :worker_id) }, class: 'form-control'
-
-      = space 10
-
-    label 作業日を指定
-    = date_select :filter, :target_date, { selected: @target_date || Date.today, prompt: '--' }, class: 'form-control'
-    = space 10
-    = submit_tag '絞込', class: 'btn btn-info'
-
-- if @worker_id.present? || @target_date.present?
+.container
   .well
-    - total_count = @question_answers.count
-    - completed_count = @question_answers.completed_count_for(params[:filter][:worker_id], @target_date)
-    code #{ completed_count } / #{ @question_answers.count }, 残り:#{ total_count - completed_count }
+    = form_tag form_url, class: 'form-inline', method: :get, data: { event_name: 'Filter sentence synonym index', bot_id: @bot.try(:id), bot_name: @bot.try(:name) } do
+      - if policy(:sentence_synonym).worker_filter?
+        = collection_select :filter, :worker_id, User.worker, :id, :email, { prompt: '-- ワーカーを選択 --', selected: params.dig(:filter, :worker_id) }, class: 'form-control'
+
+        = space 10
+
+      label 作業日を指定
+      = date_select :filter, :target_date, { selected: @target_date || Date.today, prompt: '--' }, class: 'form-control'
+      = space 10
+      = submit_tag '絞込', class: 'btn btn-info'
+
+  - if @worker_id.present? || @target_date.present?
+    .well
+      - total_count = @question_answers.count
+      - completed_count = @question_answers.completed_count_for(params[:filter][:worker_id], @target_date)
+      code #{ completed_count } / #{ @question_answers.count }, 残り:#{ total_count - completed_count }
