Update topic_tags button and add Q&A form

--- a/app/assets/stylesheets/app/modules/material-icons.scss
+++ b/app/assets/stylesheets/app/modules/material-icons.scss
@@ -16,6 +16,12 @@
   &.mi-v-sub {
     vertical-align: sub;
   }
+
+  &.mi-label-rotate {
+    transform: rotate(-135deg);
+    position: relative;
+    top: -2px;
+  }
 }
 
 .page-link {
