--- a/app/views/question_answers/_search_form.html.slim
+++ b/app/views/question_answers/_search_form.html.slim
@@ -15,6 +15,8 @@
 
   - if params[:headless].blank?
     div
-      = link_to 'トピックタグ管理', bot_topic_tags_path(@bot), class: 'btn btn-secondary'
+      = link_to bot_topic_tags_path(@bot), class: 'btn btn-secondary' do
+        = material_icon 'label', class: 'mi-sm mi-label-rotate text-gray-light'
+        span トピックタグ管理
       = space
       = link_to 'Q&A新規登録', new_bot_question_answer_path(@bot), class: 'btn btn-success', data: { event_name: 'Open new question answer', bot_id: @bot.id, bot_name: @bot.name }
