--- a/app/views/threads/_summary.html.slim
+++ b/app/views/threads/_summary.html.slim
@@ -26,8 +26,13 @@
           = material_icon 'thumb_up', class: ('text-success' if count > 0)
           = space
           = count
-      span
+      span.mr-3
         - chat.messages.bad.count.tap do |count|
           = material_icon 'thumb_down', class: ('text-danger' if count > 0)
+          = space
+          = count
+      span
+        - chat.messages.answer_marked.count.tap do |count|
+          = material_icon 'flag', class: ('text-warning' if count > 0)
           = space
           = count
