--- a/app/views/admin/word_mappings/index.html.slim
+++ b/app/views/admin/word_mappings/index.html.slim
@@ -21,8 +21,13 @@
           td = word_mapping.word
           td = word_mapping.synonym
           td.text-right
-            = link_to '編集', edit_admin_word_mapping_path(word_mapping), class: 'btn btn-secondary btn-sm', data: { event_name: 'Open edit admin word mapping', word_mapping_id: word_mapping.id }
-            = space 2
-            = link_to '削除', admin_word_mapping_path(word_mapping), class: 'btn btn-danger btn-sm', data: { confirm: '削除します。よろしいですか？', method: :delete, event_name: 'Delete admin word mapping', word_mapping_id: word_mapping.id }
-
+            = link_to edit_admin_word_mapping_path(word_mapping), class: 'btn btn-secondary btn-sm', data: { event_name: 'Open edit admin word mapping', word_mapping_id: word_mapping.id } do
+              = material_icon 'edit', class: 'mi-xs'
+              = space
+              span 編集
+            = space 3
+            = link_to admin_word_mapping_path(word_mapping), class: 'btn btn-danger btn-sm', data: { confirm: '削除します。よろしいですか？', method: :delete, event_name: 'Delete admin word mapping', word_mapping_id: word_mapping.id } do
+              = material_icon 'delete', class: 'mi-xs'
+              = space
+              span 削除
   = pagination
