--- a/app/views/admin/word_mappings/index.html.slim
+++ b/app/views/admin/word_mappings/index.html.slim
@@ -2,6 +2,8 @@
   = render 'shared/pagination', resources: @word_mappings, per_page: @per_page
 
 .container: .row: .col-8.offset-2
+  br
+  = render 'shared/flash'
   .mt-5.mb-4.d-flex.justify-content-between
     h4 システム共通同義語
     = link_to '新規登録', new_admin_word_mapping_path, class: 'btn btn-success', data: { event_name: 'Open new word mapping' }
