--- a/app/views/bots/index.html.slim
+++ b/app/views/bots/index.html.slim
@@ -9,6 +9,6 @@
         - @bots.each do |bot|
           tr: td: h4
             = link_to bot_path(bot), class: 'd-block link-silent' do
-              = image_tag(bot.image_url(:thumb), width: 56, height: 56, class: 'img-circle img-thumbnail')
+              .circle-image-56 style=css_bg_image(bot.image_url(:thumb))
               = space
               = bot.name
