normalユーザログイン時、学習失敗の場合以外は学習ボタンを表示しないように修正した

--- a/app/views/layouts/shared/ui/_side_nav.html.slim
+++ b/app/views/layouts/shared/ui/_side_nav.html.slim
@@ -10,6 +10,7 @@
         span(
           data-component="LearningButton"
           data-bot-id=@bot.id
+          data-is-admin=(current_user.present? && current_user.staff?).to_json
         )
 
       = link_to 'チャットする', new_chats_path(@bot.token), class: 'list-group-item', target: '_blank', data: { event_name: 'Open new chat', bot_id: @bot.id, bot_name: @bot.name }
