--- a/app/views/chats/show.html.slim
+++ b/app/views/chats/show.html.slim
@@ -1,6 +1,7 @@
 span(
   data-component="ChatApp"
   data-token=@bot.token
+  data-is-admin=(current_user.present? && current_user.staff?).to_json
   data-is-manager=(current_user.present? && (current_user.normal? || current_user.staff?)).to_json
   data-flash-message=flash[:warning]
 )
