--- a/app/views/threads/index.html.slim
+++ b/app/views/threads/index.html.slim
@@ -25,7 +25,7 @@
         .checkbox-pill__label
           = material_icon 'error_outline', class: 'text-muted mi-sm'
           = space
-          span 回答失敗
+          span 回答不可
       label.checkbox-pill
         input.checkbox-pill__input type="checkbox" checked=params[:good].to_bool name="good"
         .checkbox-pill__label
