Make new design of word mappings

--- a/app/assets/stylesheets/modules/material-icons.scss
+++ b/app/assets/stylesheets/modules/material-icons.scss
@@ -1,5 +1,12 @@
 .material-icons {
   vertical-align: middle;
+
+  &.mi-v-baseline {
+    vertical-align: baseline;
+  }
+  &.mi-v-top {
+    vertical-align: top;
+  }
 }
 
 small {
