--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,14 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+.bot-profile {
+  border-bottom: none;
+}
+
+.bot-status-label {
+  background-color: #dddddd;
+}
+
 .container-main {
   position: relative;
   width: 100%;
